Adding README file

--- a/ChatBot using ChatGPT API/script2.ipynb
+++ b/ChatBot using ChatGPT API/script2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'{\\n  \"id\": \"chatcmpl-7kOYypFSiT4loeHorDLsKurvD2au0\",\\n  \"object\": \"chat.completion\",\\n  \"created\": 1691291864,\\n  \"model\": \"gpt-3.5-turbo-0613\",\\n  \"choices\": [\\n    {\\n      \"index\": 0,\\n      \"message\": {\\n        \"role\": \"assistant\",\\n        \"content\": \"The question mark (?) is a punctuation mark used at the end of a sentence in English when asking a direct question. It indicates that the sentence is interrogative and prompts a response from the reader or listener.\"\\n      },\\n      \"finish_reason\": \"stop\"\\n    }\\n  ],\\n  \"usage\": {\\n    \"prompt_tokens\": 11,\\n    \"completion_tokens\": 41,\\n    \"total_tokens\": 52\\n  }\\n}\\n'"
+       "b'{\\n  \"id\": \"chatcmpl-7kOiAZimOfN5OXRIGKLPxgn5uwPEY\",\\n  \"object\": \"chat.completion\",\\n  \"created\": 1691292434,\\n  \"model\": \"gpt-3.5-turbo-0613\",\\n  \"choices\": [\\n    {\\n      \"index\": 0,\\n      \"message\": {\\n        \"role\": \"assistant\",\\n        \"content\": \"The first programming language developed in India is \\\\\"Ratna.\\\\\" Ratna was designed in the late 1950s and early 1960s at the Indian Statistical Institute (ISI) in Kolkata. It was primarily used for statistical analysis and scientific calculations.\"\\n      },\\n      \"finish_reason\": \"stop\"\\n    }\\n  ],\\n  \"usage\": {\\n    \"prompt_tokens\": 15,\\n    \"completion_tokens\": 53,\\n    \"total_tokens\": 68\\n  }\\n}\\n'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
