--- a/CIFAR 10(CNN)/CIFAR_10_CNN_.ipynb
+++ b/CIFAR 10(CNN)/CIFAR_10_CNN_.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classifying CIFAR_10 dataset using CNN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -11,6 +25,13 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras import datasets, layers, models\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading dataset"
    ]
   },
   {
@@ -36,6 +57,20 @@
    "source": [
     "(train_imgs, train_labels), (test_imgs, test_labels) = datasets.cifar10.load_data()\n",
     "train_imgs, test_imgs = train_imgs / 255.0, test_imgs / 255.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preparing model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining"
    ]
   },
   {
@@ -136,6 +171,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compiling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
@@ -146,6 +188,13 @@
     "model.compile(optimizer='adam',\n",
     "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
     "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training"
    ]
   },
   {
@@ -204,6 +253,13 @@
    ],
    "source": [
     "history = model.fit(train_imgs, train_labels, epochs=10,validation_data=(test_imgs, test_labels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualizing accuracy"
    ]
   },
   {
